load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scaler",
    srcs = [
        "deployments.go",
        "statefulSets.go",
    ],
    importpath = "github.com/jdewinne/k8s-dev-scaler/scaler",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/typed/apps/v1:apps",
    ],
)

go_test(
    name = "scaler_test",
    srcs = ["deployments_test.go"],
    embed = [":scaler"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes/fake",
    ],
)
